[project]
name = "horse-racing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "coba-yu", email = "yukob.formal@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3,<5.0.0",
    "requests>=2.32.3,<3.0.0",
]

[project.scripts]
horse-racing = "horse_racing:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "types-requests>=2.32.0.20241016",
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
]
