[project]
name = "horse-racing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "coba-yu", email = "yukob.formal@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    # lxml: pandas read_html に必要.
    # pyarrow: pandas -> polars の変換に必要.
    "beautifulsoup4>=4.12.3,<5.0.0",
    "google-cloud-aiplatform>=1.75.0,<2.0.0",
    "html5lib>=1.1,<2.0.0",
    "kfp>=2.11.0,<3.0.0",
    "lightgbm>=4.6.0",
    "lxml>=5.3.0,<6.0.0",
    "optuna>=4.2.1",
    "optuna-integration[lightgbm]>=4.2.1",
    "pandas>=2.2.3,<3.0.0",
    "polars>=1.18.0,<2.0.0",
    "pyarrow>=18.1.0,<19.0.0",
    "pyyaml>=5.3.1,<5.4",
    "requests>=2.32.3,<3.0.0",
    "selenium>=4.27.1,<5.0.0",
    "tenacity>=9.1.2,<10.0.0",
    "tqdm>=4.67.1,<5.0.0",
    "xgboost>=2.1.4",
]

[project.scripts]
horse-racing = "horse_racing:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.4",
    "mypy>=1.14.1",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "ruff>=0.8.4",
    "tox>=4.23.2",
    "tox-uv>=1.17.0",
]

[tool.mypy]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--capture=no"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
]
